--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,13 @@
             <version>RELEASE</version>
             <scope>provided</scope>
         </dependency>
+        <!--状态循环图绘制工具-->
+        <dependency>
+            <groupId>guru.nidi</groupId>
+            <artifactId>graphviz-java</artifactId>
+            <version>0.16.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
